# completed_tasks

Almost Minecraft (additional task)/: CMakeLists.txt  Task.txt  main.cpp
Anagrams/: CMakeLists.txt  Task.txt  main.cpp
Apartment building/: CMakeLists.txt  Task.txt  main.cpp
Banquet table/: CMakeLists.txt  Task.txt  main.cpp
Caesar's cipher/: Task.txt
Caesar's cipher (accepted version)/: CMakeLists.txt  main.cpp
Checking the correctness of the email address/: Task.txt
Computer simulator project/: CMakeLists.txt  Task.txt
Computer simulator project/src/: CMakeLists.txt  cpu.cpp  disk.cpp  gpu.cpp  kbd.cpp  main.cpp  ram.cpp
Data model for the village/: CMakeLists.txt  Task.txt  main.cpp
Evaluation of the results of the tic-tac-toe game/: CMakeLists.txt  Task.txt  main.cpp
IP address validation/: Task.txt  main.cpp
Implementation of a turn-based role-playing game (additional task)/: CMakeLists.txt  Task.txt  main.cpp
Implementation of the Vedomosti reading program/: CMakeLists.txt  Task.txt  main.cpp
Implementation of the game What Where When/: CMakeLists.txt  Task.txt  answers.txt  main.cpp  questions.txt
Matrices/: CMakeLists.txt  Task.txt  main.cpp
Matrix multiplication by vector/: CMakeLists.txt  Task.txt  main.cpp
Pupyrka/: CMakeLists.txt  Task.txt  main.cpp
Sea battle (additional task)/: CMakeLists.txt  Task.txt  main.cpp
Simulation of the operation of an online restaurant kitchen/: CMakeLists.txt  Task.txt  main.cpp
Smart home/: CMakeLists.txt  Task.txt  main.cpp
Sorting/: CMakeLists.txt  Task.txt  main.cpp
(+14 files in other folders)
